# pisidia

./: pyproject.toml
src/pisidia/: example.py
